--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ accelerate
 open3d
 celery[redis] 
 redis
+tiktoken
 av     # implements Python bindings to the popular ffmpeg video processing library
 isort  #Sorts imports in Python modules
 loguru #Replacing Python’s built-in logger module
