--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ aiohttp # needed for webscraping
 bs4     # needed for webscraping
 asyncio # needed for webscraping
 lxml    # needed for webscraping
-
+python-multipart # for creating rag
 tiktoken
 av     # implements Python bindings to the popular ffmpeg video processing library
 isort  # Sorts imports in Python modules
