--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ bs4     # needed for webscraping
 asyncio # needed for webscraping
 lxml    # needed for webscraping
 python-multipart # for creating rag
+aiofiles         # for creating rag
 tiktoken
 av     # implements Python bindings to the popular ffmpeg video processing library
 isort  # Sorts imports in Python modules
